--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
                     <div class="flex gap-1 bg-surface rounded-lg p-1">
                         <button onclick="showTab('chat')" id="tab-chat" class="tab-btn px-4 py-1.5 rounded-md text-sm transition-all bg-white/10 text-white">chat</button>
                         <button onclick="showTab('inventory')" id="tab-inventory" class="tab-btn px-4 py-1.5 rounded-md text-sm transition-all text-muted hover:text-white">items</button>
-                        <button onclick="showTab('settings')" id="tab-settings" class="tab-btn px-4 py-1.5 rounded-md text-sm transition-all text-muted hover:text-white">sharing</button>
+                        <button onclick="showTab('settings')" id="tab-settings" class="tab-btn px-4 py-1.5 rounded-md text-sm transition-all text-muted hover:text-white">settings</button>
                     </div>
                 </div>
                 <button id="logout-btn" onclick="logout()" class="hidden px-3 py-1.5 text-sm text-muted hover:text-white transition-colors">logout</button>
@@ -76,13 +76,13 @@
     </div>
 
     <!-- Main -->
-    <main class="max-w-2xl mx-auto px-6 py-6">
+    <main class="max-w-2xl mx-auto px-6 py-4">
         <!-- Chat Tab -->
         <div id="chat-tab" class="tab-content">
             <!-- Chat Container -->
             <div class="bg-surface border border-border rounded-2xl overflow-hidden">
                 <!-- Messages Area -->
-                <div id="chat-messages" class="h-[400px] overflow-y-auto p-5 space-y-4">
+                <div id="chat-messages" class="h-[calc(100vh-220px)] overflow-y-auto p-5 space-y-4">
                     <!-- Welcome -->
                     <div class="message-enter">
                         <p class="text-muted text-sm mb-4">Ask me about your inventory</p>
@@ -159,6 +159,21 @@
 
         <!-- Settings Tab -->
         <div id="settings-tab" class="tab-content hidden">
+            <div class="bg-surface border border-border rounded-2xl p-5 mb-4">
+                <h2 class="font-medium mb-4">Profile</h2>
+                <div class="mb-4">
+                    <label class="block text-sm text-muted mb-1">Email</label>
+                    <p id="profile-email" class="text-white">—</p>
+                </div>
+                <h3 class="text-sm font-medium text-muted mb-3">Change Password</h3>
+                <form onsubmit="handleChangePassword(event)" class="space-y-3">
+                    <input type="password" id="current-password" required placeholder="Current password" class="w-full px-4 py-2.5 bg-card border border-border rounded-lg text-white placeholder-muted">
+                    <input type="password" id="new-password" required placeholder="New password (min 8 chars)" minlength="8" class="w-full px-4 py-2.5 bg-card border border-border rounded-lg text-white placeholder-muted">
+                    <input type="password" id="confirm-password" required placeholder="Confirm new password" minlength="8" class="w-full px-4 py-2.5 bg-card border border-border rounded-lg text-white placeholder-muted">
+                    <button type="submit" class="px-4 py-2.5 bg-accent text-white rounded-lg font-medium hover:bg-accent/90 transition-all">Update Password</button>
+                </form>
+                <div id="password-feedback" class="hidden mt-3 px-4 py-2.5 rounded-lg text-sm"></div>
+            </div>
             <div class="bg-surface border border-border rounded-2xl p-5">
                 <h2 class="font-medium mb-4">Inventory Members</h2>
                 <div id="members-list" class="space-y-2 mb-4"></div>
@@ -340,7 +355,7 @@
             btn.classList.add('bg-white/10', 'text-white');
             btn.classList.remove('text-muted');
             if (tab === 'inventory') { loadInventory(); loadLocations(); }
-            if (tab === 'settings') { loadMembers(); }
+            if (tab === 'settings') { loadProfile(); loadMembers(); }
         }
 
         function addMessage(content, isUser = false) {
@@ -439,6 +454,50 @@
             activeInventoryId = parseInt(document.getElementById('inventory-selector').value);
             loadInventory();
             loadLocations();
+        }
+
+        async function loadProfile() {
+            try {
+                const res = await authFetch(`${API_URL}/api/auth/me`);
+                const data = await res.json();
+                document.getElementById('profile-email').textContent = data.email;
+            } catch(e) { console.error('Failed to load profile', e); }
+        }
+
+        async function handleChangePassword(event) {
+            event.preventDefault();
+            const fb = document.getElementById('password-feedback');
+            const newPw = document.getElementById('new-password').value;
+            const confirmPw = document.getElementById('confirm-password').value;
+
+            if (newPw !== confirmPw) {
+                fb.className = 'mt-3 px-4 py-2.5 rounded-lg text-sm bg-red-500/10 border border-red-500/20 text-red-400';
+                fb.textContent = 'New passwords do not match';
+                return;
+            }
+
+            try {
+                const res = await authFetch(`${API_URL}/api/auth/password`, {
+                    method: 'PUT',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        current_password: document.getElementById('current-password').value,
+                        new_password: newPw
+                    })
+                });
+                if (res.ok) {
+                    fb.className = 'mt-3 px-4 py-2.5 rounded-lg text-sm bg-green-500/10 border border-green-500/20 text-green-400';
+                    fb.textContent = 'Password updated successfully';
+                    event.target.reset();
+                } else {
+                    const err = await res.json();
+                    fb.className = 'mt-3 px-4 py-2.5 rounded-lg text-sm bg-red-500/10 border border-red-500/20 text-red-400';
+                    fb.textContent = err.detail || 'Failed to update password';
+                }
+            } catch(e) {
+                fb.className = 'mt-3 px-4 py-2.5 rounded-lg text-sm bg-red-500/10 border border-red-500/20 text-red-400';
+                fb.textContent = 'Network error';
+            }
         }
 
         async function loadMembers() {
