fix: rename page title and heading to Itemwise

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory</title>
+    <title>Itemwise</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -43,7 +43,7 @@
     <!-- Header -->
     <header class="border-b border-border sticky top-0 z-10 bg-bg/90 backdrop-blur-sm">
         <div class="max-w-2xl mx-auto px-6 py-4 flex items-center justify-between">
-            <h1 class="text-lg font-medium tracking-tight">inventory</h1>
+            <h1 class="text-lg font-medium tracking-tight">itemwise</h1>
             <select id="inventory-selector" class="hidden px-3 py-1.5 bg-surface border border-border rounded-lg text-sm text-white" onchange="switchInventory()">
             </select>
             <div class="flex items-center gap-3">
